--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
                 <div class="avatar-cart">
                     <div class="cart">
-                        <img src="/icon-cart.svg" alt="" class="">
+                        <img src="./icon-cart.svg" alt="" class="">
                     </div>
                     <div class="avatar">
-                        <img src="/image-avatar.png" alt="">
+                        <img src="./image-avatar.png" alt="">
                     </div>
                 </div>
 
@@ -54,7 +54,7 @@
                 <div class="section-one">
                     <div class="slidingimage-box">
                         <div class="slidingimage">
-                            <img src="/image-product-1.jpg" alt="">
+                            <img src="./image-product-1.jpg" alt="">
                         </div>
                         <div class="nexticon-button">
                         
@@ -67,16 +67,16 @@
                     </div>
                     <div class="suggestion-image">
                         <div class="productimage">
-                            <img src="/image-product-1.jpg" alt="">
+                            <img src="./image-product-1.jpg" alt="">
                         </div>
                         <div class="productimage">
-                            <img src="/image-product-2.jpg" alt="">
+                            <img src="./image-product-2.jpg" alt="">
                         </div>
                         <div class="productimage">
-                            <img src="/image-product-3.jpg" alt="">
+                            <img src="./image-product-3.jpg" alt="">
                         </div>
                         <div class="productimage">
-                            <img src="/image-product-4.jpg" alt="">
+                            <img src="./image-product-4.jpg" alt="">
                         </div>
                     </div>
                 </div>
