--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         </div>
                         <div class="addtocart-cartlogo">
                             <div class="cartlogo">
-                                <img src="/icon-cart.svg" alt="">
+                                <img src="./icon-cart.svg" alt="">
                             </div>
                             <div class="addtocart">
                                 <h4>Add to cart</h4>
